--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,3 +1,10 @@
 @import "variables";
 @import "reset";
 @import "wrapper";
+@import "logo";
+@import "serch";
+@import "settings";
+@import "menu";
+@import "main-articles";
+@import "articles-list";
+@import "footer";
