--- a/scss/_main-articles.scss
+++ b/scss/_main-articles.scss
@@ -1,5 +1,47 @@
 .main-articles {
+  display: flex;
   flex-basis: 100%;
-  height: 40rem;
   background-color: $main-color;
+  flex-wrap: wrap;
+  &__intro {
+    flex-basis: 100%;
+    margin: 6rem 0 3rem;
+    padding: 1rem 0;
+    text-align: center;
+    font-size: 4.4rem;
+    letter-spacing: 0.2rem;
+    color: $main-color;
+    background-color: $third-color;
+  }
+  .article {
+    flex-basis: 50%;
+    padding: 1.5rem;
+    text-align: center;
+    &__image {
+      display: block;
+      width: 100%;
+    }
+    &__title {
+      padding: 3.5rem 0 1.5rem;
+      font-family: $special-font;
+      text-transform: uppercase;
+      font-size: 3rem;
+    }
+    &__introduction {
+      line-height: 1.6;
+      font-size: 1.6rem;
+    }
+    &__btn {
+      display: block;
+      margin: 1rem auto;
+      width: 50%;
+      padding: 0.5rem 1rem;
+      min-width: 15rem;
+      font-size: 1.6rem;
+      color: $second-color;
+      text-decoration: none;
+      border: 2px solid $second-color;
+      background-color: $shade-three;
+    }
+  }
 }
