--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,4 +1,36 @@
 .menu {
   flex-basis: 100%;
+  height: 7rem;
   background-color: $shade-three;
+  font-family: $special-font;
+  padding: 1.5rem 5rem 1.5rem 8rem;
+  &__list {
+    list-style: none;
+    display: flex;
+  }
+  &__item {
+    margin: 0 2rem;
+    font-size: 2rem;
+    text-transform: uppercase;
+    line-height: 4rem;
+    &:hover {
+      border-bottom: 2px solid $main-color;
+    }
+    &:nth-last-child(1) {
+      margin-left: auto;
+      border: 1px solid $main-color;
+      padding: 0 2.2rem;
+      &:hover {
+        border: 2px solid $second-color;
+      }
+      .menu__link {
+        padding: 0 2rem;
+      }
+    }
+  }
+  &__link {
+    display: block;
+    color: $second-color;
+    text-decoration: none;
+  }
 }
