--- a/scss/_articles-list.scss
+++ b/scss/_articles-list.scss
@@ -1,5 +1,23 @@
 .articles-list {
+  display: flex;
+  flex-wrap: wrap;
   flex-basis: 100%;
-  height: 40rem;
+  justify-content: space-evenly;
+  text-align: center;
   background-color: $shade-three;
+  .article {
+    flex-basis: 30%;
+    background-color: $second-color;
+    margin: 2rem 0;
+    &:hover {
+      background-color: darken($second-color, 25%);
+      cursor: pointer;
+    }
+    @media (max-width: 1023px) {
+      flex-basis: 45%;
+    }
+    @media (max-width: 799px) {
+      flex-basis: 95%;
+    }
+  }
 }
