--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,5 +1,31 @@
 .footer {
+  display: flex;
   flex-basis: 100%;
-  height: 4rem;
+  justify-content: space-evenly;
   background-color: $shade-two;
+  .sm-links {
+    flex-basis: 30%;
+  }
+}
+
+.sm-links {
+  height: 30rem;
+  background-color: $shade-two;
+}
+
+.sm-links {
+  font-family: $special-font;
+  &--darken {
+    background-color: darken($shade-two, 30%);
+  }
+  &__title {
+    margin: 2rem 0 4rem;
+    font-size: 3rem;
+    text-transform: uppercase;
+    font-weight: 400;
+  }
+  &__item {
+    text-indent: 4rem;
+    font-size: 1.8rem;
+  }
 }
