--- a/scss/_main-articles.scss
+++ b/scss/_main-articles.scss
@@ -13,35 +13,48 @@
     color: $main-color;
     background-color: $third-color;
   }
-  .article {
-    flex-basis: 50%;
-    padding: 1.5rem;
-    text-align: center;
-    &__image {
-      display: block;
-      width: 100%;
+}
+.article {
+  flex-basis: 50%;
+  @media (max-width: 799px) {
+    flex-basis: 100%;
+  }
+  padding: 1.5rem;
+  text-align: center;
+  &__image {
+    display: block;
+    width: 100%;
+  }
+  &__title {
+    padding: 3.5rem 0 1.5rem;
+    font-family: $special-font;
+    text-transform: uppercase;
+    font-size: 3rem;
+  }
+  &__introduction {
+    line-height: 1.6;
+    font-size: 1.6rem;
+  }
+  &__btn {
+    display: block;
+    margin: 1rem auto;
+    width: 50%;
+    padding: 0.5rem 1rem;
+    min-width: 15rem;
+    font-size: 1.6rem;
+    color: $second-color;
+    text-decoration: none;
+    border: 2px solid $second-color;
+    background-color: $shade-three;
+  }
+  &--small {
+    padding: 2rem 3rem;
+    & .article__title {
+      font-size: 1.8rem;
+      background-color: $main-color;
     }
-    &__title {
-      padding: 3.5rem 0 1.5rem;
-      font-family: $special-font;
-      text-transform: uppercase;
-      font-size: 3rem;
-    }
-    &__introduction {
-      line-height: 1.6;
-      font-size: 1.6rem;
-    }
-    &__btn {
-      display: block;
-      margin: 1rem auto;
-      width: 50%;
-      padding: 0.5rem 1rem;
-      min-width: 15rem;
-      font-size: 1.6rem;
-      color: $second-color;
-      text-decoration: none;
-      border: 2px solid $second-color;
-      background-color: $shade-three;
-    }
+  }
+  &:hover {
+    background-color: darken($main-color, $amount: 25%);
   }
 }
