--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -3,12 +3,17 @@
   align-items: center;
   padding: 0 3rem 0 5rem;
   background-color: $third-color;
+  @media (max-width: 799px) {
+    flex-grow: 1;
+    justify-content: flex-end;
+    padding: 0 0 0 0;
+  }
   &__icon-link {
     margin: 0 0.5rem;
     font-size: 3rem;
     color: $main-color;
     &:hover {
-      color: $second-color;
+      color: darken($main-color, 25%);
     }
   }
 }
