add mixins and brakepoints for responiwe

--- a/scss/_main-articles.scss
+++ b/scss/_main-articles.scss
@@ -16,7 +16,7 @@
 }
 .article {
   flex-basis: 50%;
-  @media (max-width: 799px) {
+  @include mq(small) {
     flex-basis: 100%;
   }
   padding: 1.5rem;
