--- a/scss/_serch.scss
+++ b/scss/_serch.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  @media (max-width: 799px) {
+  @include mq(small) {
     flex-basis: 100%;
     order: -1;
     height: 8rem;
