--- a/scss/_articles-list.scss
+++ b/scss/_articles-list.scss
@@ -13,10 +13,10 @@
       background-color: darken($second-color, 25%);
       cursor: pointer;
     }
-    @media (max-width: 1023px) {
+    @include mq(large) {
       flex-basis: 45%;
     }
-    @media (max-width: 799px) {
+    @include mq(small) {
       flex-basis: 95%;
     }
   }
