--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -3,7 +3,7 @@
   align-items: center;
   padding: 0 3rem 0 5rem;
   background-color: $third-color;
-  @media (max-width: 799px) {
+  @include mq(small) {
     flex-grow: 1;
     justify-content: flex-end;
     padding: 0 0 0 0;
