--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -6,6 +6,7 @@
 
 html {
   font-size: 10px;
-  background-color: $main-color;
+  background-color: $second-color;
   font-family: $defoult-font;
+  color: $second-color;
 }
