--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,10 @@
 @import url("https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700|Roboto:100,400,700&display=swap");
 
-$main-color: #ee72ff;
-$second-color: #fff880;
-$third-color: #66ff7f;
-$shade-two: #b3ae62;
-$shade-three: #3eb351;
+$main-color: #340068;
+$second-color: #9ac2c9;
+$third-color: #ff6978;
+$shade-two: #fffcf9;
+$shade-three: #6d435a;
 
 $defoult-font: arial, sans-serif;
 $special-font: "pt sans", "robot", "arial";
