--- a/scss/_wrapper.scss
+++ b/scss/_wrapper.scss
@@ -6,6 +6,6 @@
   margin: 0 auto;
 
   font-size: 2rem;
-  background-color: $main-color;
+  background-color: $second-color;
   box-shadow: 0 0 4px 0 #000;
 }
