--- a/scss/_articles-list.scss
+++ b/scss/_articles-list.scss
@@ -4,7 +4,7 @@
   flex-basis: 100%;
   justify-content: space-evenly;
   text-align: center;
-  background-color: $shade-three;
+  background-color: $third-color;
   .article {
     flex-basis: 30%;
     background-color: $second-color;
